--- a/js30audio/blocks/_background.scss
+++ b/js30audio/blocks/_background.scss
@@ -60,7 +60,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2%;
+    gap: 3%;
 }
 
 .text {
@@ -76,32 +76,49 @@
     font-size: 20px;
 }
 
-#progress_bar {
-    cursor: pointer;
+.timeline {
+    background: white;
     width: 80%;
     height: 4%;
-
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 2px 10px 0 #0008;
     border-radius: 10px;
-
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    // outline: none;
-    // overflow: hidden;
-
-    // &::-webkit-slider-runnable-track {
-    //     background-color: #f1f1f1;
-    // }
-
-    &::-webkit-slider-thumb {
-        background: #498594;
-        cursor: pointer;
-        border-radius: 20px;
-        width: 10px;
-        height: 15px;
-        -webkit-appearance: none;
-    }
 }
+
+.progress {
+    background: red;
+    width: 0%;
+    height: 100%;
+    transition: 0.25s;
+}
+
+// #progress_bar {
+//     cursor: pointer;
+//     width: 80%;
+//     height: 4%;
+
+//     border-radius: 10px;
+
+//     -webkit-appearance: none;
+//     -moz-appearance: none;
+//     appearance: none;
+//     // outline: none;
+//     // overflow: hidden;
+
+//     // &::-webkit-slider-runnable-track {
+//     //     background-color: #f1f1f1;
+//     // }
+
+//     &::-webkit-slider-thumb {
+//         background: #498594;
+//         cursor: pointer;
+//         border-radius: 20px;
+//         width: 10px;
+//         height: 15px;
+//         -webkit-appearance: none;
+//     }
+// }
 
 .time {
     position: absolute;
@@ -128,24 +145,36 @@
 }
 
 #prevBtn,
-#nextBtn {
+#nextBtn,
+#loop,
+#volume,
+#play_pause {
     width: 10%;
     cursor: pointer;
     border-radius: 50%;
+    transition: all 0.1s linear;
 
     &:hover {
-        background-color: rgb(80, 148, 207);
+        // background-color: rgb(255, 255, 255);
+        transform: scale(1.1);
+    }
+
+    &:active {
+        transform: scale(0.9);
     }
 }
 
 #play_pause {
     width: 20%;
-    cursor: pointer;
-    border-radius: 50%;
+}
 
-    &:hover {
-        background-color: rgb(80, 148, 207);
-    }
+#loop,
+#volume {
+    width: 8%;
+}
+
+.active {
+    border: 2px solid #b9eaf5;
 }
 
 
