--- a/js30audio/css/style.css
+++ b/js30audio/css/style.css
@@ -47,7 +47,7 @@ body {
   background-color: rgb(0, 0, 0);
 }
 
-#backGroundImg {
+.bGimg {
   position: absolute;
   top: 0;
   left: 0;
@@ -61,10 +61,21 @@ body {
   transition: all 0.5s;
 }
 
-.imgFade {
+.bGimg.imgFade {
   opacity: 0;
 }
 
+@keyframes fade {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .wrapper {
   position: absolute;
   top: 0;
@@ -75,13 +86,14 @@ body {
   z-index: 2;
   width: 300pt;
   height: 300pt;
-  background-color: aqua;
+  background: #2193b0;
+  background: linear-gradient(to right, #6dd5ed, #2193b0);
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 0 20px #000000;
 }
 
-#posterImg {
+.poster {
   position: absolute;
   top: 30%;
   left: 50%;
@@ -89,6 +101,12 @@ body {
   width: 110%;
   height: auto;
   z-index: 3;
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.poster.imgFade {
+  opacity: 0;
 }
 
 .controls {
