--- a/js30audio/blocks/_background.scss
+++ b/js30audio/blocks/_background.scss
@@ -2,10 +2,6 @@
     width: 100%;
     height: 100vh;
     background-color: rgb(0, 0, 0);
-    // background-image: url('../img/image1.jpg');
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // background-position: center;
 }
 
 .bGimg {
@@ -20,7 +16,6 @@
     filter: blur(2px);
     opacity: 1;
     transition: all 0.5s;
-
 }
 
 .bGimg.imgFade {
@@ -60,8 +55,6 @@
 
 .poster.imgFade {
     opacity: 0;
-    // animation: fade 2s linear infinite;
-    // animation-delay: 1s;
 }
 
 .controls {
@@ -159,7 +152,6 @@
     transition: all 0.1s linear;
 
     &:hover {
-        // background-color: rgb(255, 255, 255);
         transform: scale(1.1);
     }
 
@@ -187,7 +179,6 @@
             width: 500%;
             left: -530%;
         }
-
     }
 }
 
@@ -201,7 +192,6 @@
     top: 50%;
     left: 0;
     z-index: 4;
-    // width: 500%;
     width: 0;
     height: 50%;
     background-color: #fff;
@@ -220,23 +210,34 @@
     border: 2px solid #b9eaf5;
 }
 
+.footer {
+    padding: 0 1rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 6%;
+    z-index: 6;
+    background-color: rgba(37, 37, 37, 0.5);
 
-
-
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: rgba(245, 245, 245, 0.6);
+}
 
 @media screen and (max-width: 1024px) {
-
-
     .wrapper {
         width: 39%;
         height: calc(100vw * 0.39);
     }
 
-    #name {
+    .name {
         font-size: calc(100vw * 0.029);
     }
 
-    #artist {
+    .artist {
         font-size: calc(100vw * 0.0195);
     }
 
