--- a/js30audio/css/style.css
+++ b/js30audio/css/style.css
@@ -251,15 +251,31 @@ body {
   border: 2px solid #b9eaf5;
 }
 
+.footer {
+  padding: 0 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 6%;
+  z-index: 6;
+  background-color: rgba(37, 37, 37, 0.5);
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: rgba(245, 245, 245, 0.6);
+}
+
 @media screen and (max-width: 1024px) {
   .wrapper {
     width: 39%;
     height: 39vw;
   }
-  #name {
+  .name {
     font-size: 2.9vw;
   }
-  #artist {
+  .artist {
     font-size: 1.95vw;
   }
   .time {
