--- a/js30video/css/style.css
+++ b/js30video/css/style.css
@@ -1,3 +1,64 @@
-h1 {
-  font-size: 20px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 0;
+  list-style: none;
+  font: inherit;
+}
+
+ul,
+p,
+h1,
+h2,
+h2,
+h4 {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+body {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 62.5%;
+  background-color: #8d8d8d;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  padding: 40px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.video_player_wrapper {
+  max-width: 1024px;
+}
+
+.video {
+  width: 100%;
+}
+
+.btn {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+.btn:hover {
+  transform: scale(1.2);
+}
+.btn:active {
+  transform: scale(0.3);
 }/*# sourceMappingURL=style.css.map */
