feat: js get purationTime upload video

--- a/js30video/blocks/_main.scss
+++ b/js30video/blocks/_main.scss
@@ -118,6 +118,16 @@ body {
 .right {
     width: 70%;
     justify-content: flex-end;
+    gap: 20px;
+}
+
+.skip_left,
+.skip_next {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    color: #fff;
+    gap: 3px;
 }
 
 .volum_wraper {
@@ -164,7 +174,7 @@ body {
 }
 
 input[type=range] {
-    -webkit-appearance: none;
+    // -webkit-appearance: none;
     background: transparent;
     width: 80%;
     margin: 0 5px;
