--- a/js30imageGalery/css/style.css
+++ b/js30imageGalery/css/style.css
@@ -1,3 +1,112 @@
-h1 {
-  font-size: 1rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 0;
+  list-style: none;
+}
+
+ul,
+p,
+h1,
+h2 {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+body {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 62.5%;
+  color: #d1d0c5;
+  background-color: #323437;
+  font-family: "Roboto Mono", monospace;
+}
+
+.header {
+  border-bottom: 4px solid #e2b714;
+}
+
+.container {
+  max-width: 1440px;
+  padding: 0 15px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+}
+
+.title_inner {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.logo {
+  width: 50px;
+  height: auto;
+}
+
+.title {
+  font-size: 40px;
+}
+
+.search_box {
+  position: relative;
+  max-width: 250px;
+  width: 100%;
+  height: 40px;
+}
+
+.search_input {
+  padding: 0 7px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #e2b714;
+  border-radius: 15px;
+  background-color: #292928;
+  caret-color: #d1d0c5;
+  font-size: 20px;
+  color: #d1d0c5;
+}
+
+.search_icon {
+  max-width: 20px;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  right: 4%;
+  z-index: 1;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.search_icon:hover {
+  top: 27%;
+  transform: scale(1.2);
+}
+.search_icon:active {
+  top: 23%;
+  transform: scale(0.8);
+}
+
+.galery_inner {
+  display: grid;
+  width: 100%;
+  flex-wrap: wrap;
 }/*# sourceMappingURL=style.css.map */
