--- a/js30imageGalery/style.scss
+++ b/js30imageGalery/style.scss
@@ -69,13 +69,13 @@ body {
 
 .search_box {
     position: relative;
-    max-width: 250px;
+    max-width: 300px;
     width: 100%;
     height: 40px;
 }
 
 .search_input {
-    padding: 0 7px;
+    padding: 0 53px 0 7px;
     width: 100%;
     height: 100%;
     border: 1px solid #e2b714;
@@ -86,7 +86,7 @@ body {
     color: #d1d0c5;
 }
 
-
+.close_icon,
 .search_icon {
     max-width: 20px;
     height: auto;
@@ -109,8 +109,31 @@ body {
     }
 }
 
+.close_icon {
+    right: 13%;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.close_icon.hidden {
+    visibility: visible;
+    opacity: 1;
+}
+
 .galery_inner {
+    margin: 20px;
     display: grid;
-    width: 100%;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(3, 380px);
+    gap: 20px;
+    justify-content: center;
+}
+
+.img {
+    width: 380px;
+    height: 214px;
+    background-position: center;
+    background-size: cover;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0px 0px 15px #e2b714;
 }
