--- a/js30imageGalery/style.scss
+++ b/js30imageGalery/style.scss
@@ -33,6 +33,10 @@ body {
     font-family: 'Roboto Mono', monospace;
 }
 
+.hidden {
+    overflow: hidden;
+}
+
 .header {
     border-bottom: 4px solid #e2b714;
 }
@@ -86,6 +90,11 @@ body {
     color: #d1d0c5;
 }
 
+.search_input:focus {
+    box-shadow: 0px 0px 15px #e2b714;
+    outline: none;
+}
+
 .close_icon,
 .search_icon {
     max-width: 20px;
@@ -99,7 +108,7 @@ body {
     transition: all 0.2s ease-in-out;
 
     &:hover {
-        top: 27%;
+        top: 25%;
         transform: scale(1.2);
     }
 
@@ -124,8 +133,9 @@ body {
     margin: 20px;
     display: grid;
     grid-template-columns: repeat(3, 380px);
-    gap: 20px;
-    justify-content: center;
+    row-gap: 40px;
+    column-gap: 20px;
+    justify-content: space-evenly;
 }
 
 .img {
@@ -133,7 +143,29 @@ body {
     height: 214px;
     background-position: center;
     background-size: cover;
+    overflow: hidden;
     border-radius: 4px;
     cursor: pointer;
-    box-shadow: 0px 0px 15px #e2b714;
+    box-shadow: 0px 0px 10px #e2b714;
+}
+
+
+@media screen and (max-width: 1220px) {
+    .galery_inner {
+        grid-template-columns: repeat(2, 380px);
+    }
+}
+
+@media screen and (max-width: 830px) {
+    .galery_inner {
+        grid-template-columns: repeat(1, 380px);
+    }
+
+    .title {
+        font-size: 20px;
+    }
+
+    .search_box {
+        max-width: 200px;
+    }
 }
