--- a/js30imageGalery/style.scss
+++ b/js30imageGalery/style.scss
@@ -149,6 +149,16 @@ body {
     box-shadow: 0px 0px 10px #e2b714;
 }
 
+.footer {
+    padding: 0 1rem;
+    width: 100%;
+    height: 50px;
+    border-top: 2px solid #e2b714;
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 @media screen and (max-width: 1220px) {
     .galery_inner {
