--- a/js30audio/css/style.css
+++ b/js30audio/css/style.css
@@ -267,6 +267,11 @@ body {
   color: rgba(245, 245, 245, 0.6);
 }
 
+.logo {
+  width: 100px;
+  height: auto;
+}
+
 @media screen and (max-width: 1024px) {
   .wrapper {
     width: 39%;
