--- a/js30audio/blocks/_background.scss
+++ b/js30audio/blocks/_background.scss
@@ -227,6 +227,11 @@
     color: rgba(245, 245, 245, 0.6);
 }
 
+.logo {
+    width: 100px;
+    height: auto;
+}
+
 @media screen and (max-width: 1024px) {
     .wrapper {
         width: 39%;
