--- a/js30imageGalery/style.scss
+++ b/js30imageGalery/style.scss
@@ -152,12 +152,17 @@ body {
 .footer {
     padding: 0 1rem;
     width: 100%;
-    height: 50px;
+    height: 70px;
     border-top: 2px solid #e2b714;
     font-size: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.logo_rs {
+    width: 100px;
+    height: auto;
 }
 
 @media screen and (max-width: 1220px) {
