--- a/js30snakeGame/style.css
+++ b/js30snakeGame/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+ul {
+    list-style-type: none;
+}
+
 body {
     background-color: rgb(82, 82, 82);
     color: rgb(196, 196, 196);
@@ -12,20 +16,10 @@ body {
     justify-content: center;
     height: 100vh;
     overflow: hidden;
-    /* background: url('img/1.jpg') center no-repeat;
-    background-size: contain; */
     font-style: normal;
     font-weight: 400;
     font-size: 62.5%;
-}
-
-.container {
     position: relative;
-    top: 11vmin;
-    background: url('img/pngegg.png') center no-repeat;
-    background-size: contain;
-    width: 74vmin;
-    height: 120vmin;
 }
 
 .bgImg {
@@ -38,6 +32,140 @@ body {
     width: 100%;
     z-index: -2;
     filter: blur(2px);
+}
+
+.user_name_wrapper {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, .8);
+}
+
+.user_name_wrapper.hidden {
+    display: none;
+}
+
+.user_name {
+    width: 40vmin;
+    height: 15vmin;
+    background-color: #2c2c2c;
+    border: 2px solid #aa5454;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2vmin;
+}
+
+.input {
+    width: 27vmin;
+    height: 4vmin;
+    font-size: 2vmin;
+}
+
+.btnSubmit {
+    width: 9vmin;
+    height: 4vmin;
+    font-size: 2vmin;
+    border: 1px solid #a5a5a5;
+    color: #fff;
+    background-color: #7e7e7e;
+    border-radius: 2vmin;
+    cursor: pointer;
+}
+
+.btnSubmit:hover {
+    background-color: #c4c4c4;
+}
+
+.container {
+    position: relative;
+    top: 11vmin;
+    left: -20vmin;
+    background: url('img/pngegg.png') center no-repeat;
+    background-size: contain;
+    width: 74vmin;
+    height: 120vmin;
+}
+
+.kid {
+    display: block;
+    position: absolute;
+    top: 12vmin;
+    left: 72vmin;
+}
+
+.kid.hidden {
+    display: none;
+}
+
+.kid img {
+    width: 40vmin;
+    height: auto;
+}
+
+.kid_text {
+    position: absolute;
+    padding: 1vmin;
+    top: 30vmin;
+    left: -12vmin;
+    font-size: 2vmin;
+    color: #fff;
+    background-color: #2c2c2c;
+    border-radius: 2vmin;
+}
+
+.record_table {
+    position: absolute;
+    top: 58vmin;
+    left: 54vmin;
+    width: 20vmin;
+    height: auto;
+    opacity: 1;
+    padding: 1vmin;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #aa5454;
+    border: 1px solid #2c2c2c;
+    border-radius: 1vmin;
+    transition: all 0.3s ease-in-out;
+}
+
+.record_table.hidden {
+    width: 0;
+    opacity: 0;
+}
+
+.name_result {
+    font-size: 2vmin;
+    color: #fff;
+    border-bottom: 1px solid #000;
+}
+
+.table_result {
+    width: 100%;
+}
+
+.result {
+    padding-left: 2vmin;
+    font-size: 2vmin;
+    color: #fff;
 }
 
 .game {
@@ -73,7 +201,7 @@ body {
 
 .controls {
     position: relative;
-    top: 8%;
+    top: 8.03%;
     left: 17%;
     width: 40vmin;
     height: 38vmin;
@@ -94,8 +222,7 @@ body {
 
 .score,
 .speed,
-.time,
-.table {
+.time {
     border: 2px solid #aa5454;
     background-color: rgb(141, 141, 141);
     display: flex;
@@ -107,14 +234,58 @@ body {
     border-radius: 2vmin;
 }
 
+.table,
 .newGame,
-.leave {
+.control {
     text-align: center;
     width: 100%;
     font-size: 3vmin;
     border-radius: 2vmin;
     border: 2px solid #aa5454;
     border-radius: 2vmin;
+}
+
+.btn {
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #aa5454;
+    color: #fff;
+    border-radius: 2vmin;
+}
+
+.volume {
+    width: 3vmin;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.volume img {
+    width: 3vmin;
+    height: auto;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.year {
+    font-size: 3vmin;
+    color: #000;
+    font-weight: bold;
+}
+
+.logo img {
+    width: 9vmin;
+    height: auto;
+}
+
+.git img {
+    width: 4vmin;
+    height: auto;
 }
 
 .head,
