fix: js script js

--- a/js30snakeGame/style.css
+++ b/js30snakeGame/style.css
@@ -61,6 +61,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border-radius: 2vmin;
 }
 
 .form {
