--- a/js30randomGame/style.css
+++ b/js30randomGame/style.css
@@ -10,4 +10,71 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10px;
+}
+
+.game_wrapper {
+    position: relative;
+    max-width: 800px;
+    width: 100%;
+    object-fit: contain;
+    height: auto;
+    display: flex;
+    border: 4px solid #c3c9a8;
+    border-radius: 2vmin;
+    overflow: hidden;
+}
+
+.stats_wrapper {
+    position: absolute;
+    top: 80%;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 20%;
+    /* background-color: aqua; */
+    padding: 2%;
+}
+
+#game {
+    width: 100%;
+    object-fit: contain;
+}
+
+#arrowSpeed {
+    position: absolute;
+    top: 39%;
+    left: 3%;
+    z-index: 2;
+    width: 12%;
+    height: auto;
+    /* transform: rotate(-30deg); */
+}
+
+#speedPanel {
+    width: 21%;
+    height: auto;
+}
+
+.btn_menu {
+    width: 15%;
+    height: 4%;
+    border: 2vmin solid #c3c9a8;
+    background-color: #c3c9a8;
+    border-radius: 2vmin;
+    font-size: 2vmin;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Verdana, sans-serif;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.btn_menu:hover {
+    background-color: #81856f;
+    border: 2vmin solid #81856f;
 }
