--- a/js30randomGame/style.css
+++ b/js30randomGame/style.css
@@ -25,42 +25,189 @@ body {
     overflow: hidden;
 }
 
-.stats_wrapper {
+.game_main_menu {
     position: absolute;
-    top: 80%;
+    top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 3;
+    background-color: antiquewhite;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: url('img/poster.png');
+    background-size: 100% 100%;
+    transition: transform 0.5s ease-in-out;
+}
+
+.game_main_menu.hidden {
+    transform: translateY(-100%);
+}
+
+.btn_wrapper {
+    position: relative;
+    top: 30%;
+    width: 100%;
+    height: 30%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
+    padding: 0 5%;
+}
+
+.btn_main {
+    width: 25%;
     height: 20%;
-    /* background-color: aqua; */
+    background-color: #c3c9a8;
+    border: 2px solid #c3c9a8;
+    border-radius: 2vmin;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(175, 61, 61);
+    font-family: Verdana, sans-serif;
+    font-size: 2vmin;
+    cursor: pointer;
+}
+
+.btn_main:hover {
+    background-color: rgb(110, 114, 94);
+    border-color: rgb(110, 114, 94);
+    color: #c3c9a8;
+    box-shadow: 0 0 30px rgb(110, 114, 94);
+}
+
+
+.input_name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 4;
+    transform: translateX(-50%);
+    width: 30%;
+    height: 20%;
+    background-color: #c3c9a8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10%;
+    border-radius: 2vmin;
+}
+
+.input_name.hidden {
+    display: none;
+}
+
+.input_name input {
+    width: 80%;
+    height: 20%;
+    font-size: 2vmin;
+}
+
+.input_name button {
+    width: 30%;
+    height: 20%;
+}
+
+.records_wrapper {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    z-index: 4;
+    transform: translateX(-50%);
+    width: 30%;
+    height: 32%;
+    padding: 3%;
+    background-color: #c3c9a8;
+    border-radius: 2vmin;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Verdana, sans-serif;
+    font-size: 2vmin;
+}
+
+.records_wrapper.hidden {
+    display: none;
+}
+
+.records_table {
+    width: 80%;
+}
+
+.records_table {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    list-style-type: none;
+}
+
+.stats_wrapper {
+    position: absolute;
+    top: 80%;
+    left: 75%;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
+    width: 25%;
+    height: 20%;
     padding: 2%;
 }
+
+.countdown {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 5;
+    transform: translate(-50%, -50%);
+    font-size: 6vmin;
+    color: #fdf900;
+}
+
+.countdown.hidden {
+    display: none;
+}
+
+.end_game {
+    padding: 5%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 5;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #474747;
+    border-radius: 2vmin;
+}
+
+.end_game.hidden {
+    display: none;
+}
+
+.btn_main.end {
+    width: 40%;
+    height: 5vmin;
+}
+
 
 #game {
     width: 100%;
     object-fit: contain;
 }
 
-#arrowSpeed {
-    position: absolute;
-    top: 39%;
-    left: 3%;
-    z-index: 2;
-    width: 12%;
-    height: auto;
-    /* transform: rotate(-30deg); */
-}
-
-#speedPanel {
-    width: 21%;
-    height: auto;
-}
 
 .btn_menu {
-    width: 15%;
+    width: 90%;
     height: 4%;
     border: 2vmin solid #c3c9a8;
     background-color: #c3c9a8;
@@ -72,6 +219,10 @@ body {
     font-family: Verdana, sans-serif;
     cursor: pointer;
     transition: all 0.3s;
+}
+
+.btn_menu.hidden {
+    display: none;
 }
 
 .btn_menu:hover {
