--- a/js30randomGame/style.css
+++ b/js30randomGame/style.css
@@ -34,6 +34,7 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     background: url('img/poster.png');
     background-size: 100% 100%;
     transition: transform 0.5s ease-in-out;
@@ -52,6 +53,32 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 0 5%;
+}
+
+.footer {
+    height: 6%;
+    margin-top: auto;
+    padding: 0 2%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #c3c9a8;
+    align-items: center;
+}
+
+.year {
+    font-size: 3vmin;
+    color: #000;
+    font-weight: bold;
+}
+
+.logo img {
+    width: 9vmin;
+    height: auto;
+}
+
+.git img {
+    width: 4vmin;
+    height: auto;
 }
 
 .btn_main {
@@ -76,18 +103,25 @@ body {
     box-shadow: 0 0 30px rgb(110, 114, 94);
 }
 
-.name_text {
+.name_text,
+.score_text {
     width: 25%;
     height: 20%;
-    background-color: #636363;
+    background-color: #9b3f3f;
     border: 2px solid #636363;
     border-radius: 2vmin;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(189, 189, 189);
+    color: rgb(221, 219, 219);
     font-family: Verdana, sans-serif;
     font-size: 2vmin;
+}
+
+.score_text {
+    width: 87%;
+    height: 30%;
+    background-color: #636363;
 }
 
 
@@ -190,19 +224,26 @@ body {
 }
 
 .end_game {
-    padding: 5%;
+    padding: 2%;
     position: absolute;
     top: 50%;
     left: 50%;
     z-index: 5;
     transform: translate(-50%, -50%);
-    width: 40%;
-    height: 10%;
+    width: 56%;
+    height: 13%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     background-color: #474747;
     border-radius: 2vmin;
+}
+
+.end_wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .end_game.hidden {
